# ArcReel

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
agent_runtime_profile/: CLAUDE.drama.md  CLAUDE.md  CLAUDE.narration.md
frontend/: package.json  pnpm-lock.yaml
lib/: cost_calculator.py  dashscope_shared.py  data_validator.py  generation_queue.py  generation_queue_client.py  generation_worker.py  logging_utils.py  media_generator.py  project_change_hints.py  project_manager.py  prompt_builders.py  prompt_builders_reference.py  prompt_builders_script.py  script_generator.py  script_models.py  status_calculator.py  version_manager.py
server/: app.py
tests/: factories.py  test_app_module.py  test_auth.py  test_auth_middleware.py  test_auth_router.py  test_backend_assembly_specs.py  test_config_registry.py  test_config_registry_models.py  test_config_resolver.py  test_config_service.py  test_cost_calculator.py  test_cost_estimation_service.py  test_custom_provider_endpoints.py  test_custom_provider_factory.py  test_custom_provider_models.py  test_custom_provider_resolution.py  test_custom_providers_api.py  test_files_router.py  test_generate_router.py  test_generation_queue.py  test_generation_queue_client.py  test_generation_tasks_service.py  test_grid_executor.py  test_kling_video_backend.py  test_media_generator_module.py  test_minimax_integration.py  test_model_discovery.py  test_openai_image_backend.py  test_openai_image_resolution.py  test_pricing_lookup.py  (+18 more)
(+151 files in other folders)
