[project]
name = "arcreel"
version = "0.1.0"
description = "AI video generation workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.44",
    "ffmpeg-python>=0.2.0",
    "fastapi>=0.133.1",
    "google-genai>=1.65.0",
    "Pillow>=12.1.1",
    "pydantic>=2.12.5",
    "PyYAML>=6.0.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pyjwt>=2.11.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["lib", "webui/server"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    'if __name__ == "__main__":',
    "if __name__ == '__main__':",
]
